Resolves: tdf#91078 check also DBData modified, not only named expressions

This adds ScDocument& to all RefUpdate...Context; another approach could
had been to add an UpdatedDBData similar to UpdatedRangeNames and gather
those in the ScDBData::Update...() methods, but as long as
ScDBData::IsModified() works that isn't necessary.

Change-Id: Iae3ec6c8b8356cbd8acb2445489e91e7d6922fb3